Fixed the z-index and made the shadow to cast over the carousal

--- a/main.css
+++ b/main.css
@@ -18,7 +18,6 @@ ul.sticky{
 	width: 100%;
 	list-style-type: none;
 	text-align: center;
-	background: #00f;
 	position: fixed;
 	z-index: 2;
 	background-color: #eee;
@@ -82,24 +81,26 @@ img.logo.sticky{
 .col-sm-6{
 	text-align: center;
 }
+#chat{
+	box-shadow: 2px 2px 2px #b2b2b2;
+}
 #myCarousel{
 	background: url(images/carousel-placeholder.png);
+	z-index: -2;
 }
 .carousel-inner > .item > h3,
   .carousel-inner > .item > a > h3 {
-  	  height: 250px; 
+  	  height: 280px; 
       width: 100%;
       margin: auto;
       background: linear-gradient(
 	      rgba(0, 0, 0, 0.7), 
 	      rgba(0, 0, 0, 0.7)
     );
+      z-index: -1;
 }
 .right.carousel-control, .left.carousel-control {
       display: none;
-}
-.carousel-indicators{
-	z-index: -1;
 }
 .item h3{
 	padding: 80px;
@@ -118,6 +119,7 @@ p{
     src: url("fonts/Roboto-BoldItalic_2.ttf") /* TTF file for CSS3 browsers */
 }
 .row1{
+	box-shadow: 0px 0px 10px #b2b2b2; 
 	height:30%;
 	width: 100%;
 	display: block;
